<resources>
    <string name="app_name">divoc666</string>
    <string name="text_placeholder_title">Title</string>
    <string name="text_placeholder_time">Time</string>
    <string name="text_placeholder_source">Source</string>
    <string name="menu_item_news">News</string>
    <string name="menu_item_scholar">Scholar</string>
    <string name="menu_item_data">Data</string>
    <string name="menu_item_knowledge">Knowledge</string>
    <string name="menu_item_cluster">Cluster</string>
    <string name="button_edit_category">Edit</string>
    <string name="app_title">COVID Tracker</string>
    <string name="category_all">All</string>
    <string name="category_event">Events</string>
    <string name="category_points">Points</string>
    <string name="category_news">News</string>
    <string name="category_paper">Papers</string>
    <string name="button_search">Search</string>
    <string name="text_refresh_success">Successfully refreshed</string>
    <string name="text_loading">Loading...</string>
    <string name="known_scholar">Experts &amp; Scholars</string>
    <string name="scholar_h_index">H Index</string>
    <string name="scholar_g_index">G Index</string>
    <string name="scholar_activity">Activity</string>
    <string name="scholar_diversity">Diversity</string>
    <string name="scholar_citations">Citations</string>
    <string name="scholar_publications">Publications</string>
    <string name="scholar_bio">Bio</string>
    <string name="scholar_tags">Tags</string>
    <string name="scholar_edu">Education</string>
    <string name="text_share_with">Share with</string>
    <string name="text_origin">Origin:</string>
    <string name="title_data">Epidemic Data</string>
    <string name="tab_domestic">China</string>
    <string name="tab_global">Global</string>
    <string name="text_last_update">"Last Updated on "</string>
    <string name="text_overall_data">Overall</string>
    <string name="text_regional_data">Regional</string>
    <string name="text_refresh_failed">Couldn\'t get more news</string>
    <string name="text_data_confirmed">Confirmed</string>
    <string name="text_data_region">Region</string>
    <string name="text_data_cured">Cured</string>
    <string name="text_data_dead">Dead</string>
    <string name="text_knowledge_graph">Knowledge Graph</string>
    <string name="text_entity_relations">Relations</string>
    <string name="text_entity_properties">Properties</string>
    <string name="text_star">★</string>
    <plurals name="text_knowledge_entries_found">
        <item quantity="one">1 entry found</item>
        <item quantity="other">%d entries found</item>
    </plurals>
    <string name="text_knowledge_entry_failed">Error occurred when searching for entities</string>
    <string name="text_start_knowledge">The integrated, open-source\nCOVID knowledge graph</string>
    <string name="text_no_data">Refresh to get epidemic chart</string>
    <string name="text_data_fetch_failed">Failed to fetch latest epidemic data</string>
    <string name="text_data_refreshed">Latest epidemic data updated</string>
    <string name="text_title_cluster">Event Cluster</string>
    <string name="text_edit_category">Edit Columns</string>
    <string name="text_category_displayed">My Columns</string>
    <string name="text_category_more">More Columns (click to add)</string>
    <string name="text_category_at_least_one">At least one column should be selected</string>
</resources>
