<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:context=".NewsEntryFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_marginTop="@dimen/appbar_padding_top"
            android:layout_marginBottom="@dimen/appbar_padding_top" android:layout_marginStart="@dimen/appbar_padding"
            android:layout_marginEnd="@dimen/appbar_padding">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_placeholder_title" android:id="@+id/view_title" android:textSize="16sp"
                android:textColor="@color/design_default_color_on_secondary"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_placeholder_time" android:id="@+id/view_time" android:textSize="12sp"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_weight="1"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_placeholder_source" android:id="@+id/view_source"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>